@@ -1,6 +1,7 @@
 <?php 
 
-$newMessages = YumMessages::model()->findAll('to_user_id = :to and message_read = 0',
+$newMessages = YumMessages::model()->findAll(
+		'to_user_id = :to and message_read = 0',
 		array( ':to' => Yii::app()->user->id)
 		);
 
